--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "4.3.1",
+    "classnames": "2.2.6",
+    "headroom.js": "0.11.0",
+    "node-sass": "^4.14.1",
+    "nouislider": "14.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.4.1",
+    "reactstrap": "8.4.1"
+  },
+  "devDependencies": {
+    "jquery": "3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
