--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
-  },
-  "devDependencies": {
+    "reactstrap": "8.4.1",
     "jquery": "3.5.0"
   },
   "scripts": {
